# competencyAnalyser

./: .env  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
competencyAnalyser/: config.py  constants.py  database.py  models.py  test.py
competencyAnalyser/additional_scripts/: main.py
competencyAnalyser/api/: models.py  schemas.py
competencyAnalyser/db/: database.py
competencyAnalyser/parsing/: parse.py
competencyAnalyser/parsing/texts/: competencies.txt  to_parse.txt  to_parse_bv.txt
competencyAnalyser/routers/: ai.py  answers.py  business_types.py  competencies.py  main.py  questions.py  users.py  vacancies.py
competencyAnalyser/scripts/: competencyAnalyser.py  main.py
static/: competencies.txt  index.css
templates/: authorization.html  intro.html  quiz.html  register.html
templates/components/: header.html  textarea.html
templates/general_pages/: error.html  hr_auth_page.html  index.html  quiz.html  welcome.html
templates/shared/: base.html
tests/: test_users.py
